--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,11 @@
 			"Composer\\Config::disableProcessTimeout",
 			"php -S localhost:8000 -t public"
 		]
+	},
+	"autoload": {
+		"psr-4": {
+			"UptimeStatus\\": "controller/",
+			"UptimeStatus\\Model\\": "model/"
+		}
 	}
 }
